fixed z-index issue

--- a/apps/web-giddh/src/app/inventory/components/aside-pane/aside-pane.components.scss
+++ b/apps/web-giddh/src/app/inventory/components/aside-pane/aside-pane.components.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   width: 100%;
   max-width:580px;
-  z-index: 1045;
+  z-index: 9999;
   position: fixed;
   display: block;
 }
